--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,9 @@ a:hover {
   color: #fff;
 }
 
+a.phone{
+    color: #A6C2F7;
+}
 /* Custom default button */
 .btn-default,
 .btn-default:hover,
@@ -38,7 +41,7 @@ body {
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 #steps_ul, #contacts_ul{
-    margin-bottom: 50px;
+    margin-bottom: 15px;
 }
 
 .lead{
@@ -120,4 +123,55 @@ button.edit-mobile i.fa-edit, button.edit-mobile i.fa-check-square-o{
     position: relative;
     top: -5px;
     left: -2px;
+}
+
+button.flipButton{
+    color: #fff;
+    margin-bottom: 15px;
+    background-color: #E8A500;
+}
+/* Flip CSS */
+/* entire container, keeps perspective */
+.flip-container {
+	perspective: 1000px;
+}
+/* flip the pane when hovered */
+.flip-container.hover .flipper, .flip-container.flip .flipper {
+    transform: rotateY(180deg);
+}
+
+.flip-container, .front, .back {
+	/*width: 320px;
+	height: 480px;*/
+    width: 100%;
+    height: 100%;
+}
+
+/* flip speed goes here */
+.flipper {
+	transition: 0.6s;
+	transform-style: preserve-3d;
+
+	position: relative;
+}
+
+/* hide back of pane during swap */
+.front, .back {
+	backface-visibility: hidden;
+
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+/* front pane, placed above back */
+.front {
+	z-index: 2;
+	/* for firefox 31 */
+	transform: rotateY(0deg);
+}
+
+/* back, initially hidden pane */
+.back {
+	transform: rotateY(180deg);
 }
