--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,15 @@
  */
 
 /* Links */
+p,li{
+    font-family:"Roboto Slab","Helvetica Neue","Helvetica",Arial,sans-serif;
+    color: #444;
+}
+
+h1{
+    font-family: "Open Sans","Helvetica Neue","Helvetica",Arial,sans-serif;
+    color: #222;
+}
 a,
 a:focus,
 a:hover {
@@ -10,7 +19,7 @@ a:hover {
 }
 
 a.phone{
-    color: #A6C2F7;
+    color: #1073CE;
 }
 /* Custom default button */
 .btn-default,
@@ -26,17 +35,9 @@ a.phone{
 /*
  * Base structure
  */
-html,
-body {
-  min-height: 100%;
-  background-color: #005a9c;
-  background-size: 100% 100%;
-  /*-webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
-        box-shadow: inset 0 0 100px rgba(0,0,0,.5);*/
-}
 body {
   color: #fff;
-  text-shadow: 0 1px 3px rgba(0,0,0,.5);
+  /*text-shadow: 0 1px 3px rgba(0,0,0,.5);*/
 }
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
@@ -62,10 +63,23 @@ body {
     margin: 3px;
     padding: 2px;
 }
-nav.navbar {
-    background-color: #fff;
+nav.navbar-default {
+    background-color: #005a9c;
 }
-
+.navbar-default .navbar-brand, .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:visited{
+    color: #fff;
+}
+.navbar-default .navbar-brand{
+    margin: 0px;
+    paddin: 0px;
+}
+.navbar-default .navbar-nav .active a, .navbar-default .navbar-nav .active a:hover, .navbar-default .navbar-nav .active a:visited{
+    color: #fff;
+    background-color: #1073CE;
+}
+.navbar-default .navbar-nav li a {
+    color: #fff;
+}
 .show_section{
     display: initial;
 }
@@ -81,7 +95,7 @@ nav.navbar {
 #settings button{
     background: inherit;
     border: none;
-    color: #666;
+    color: #fff;
     margin-top:7px;
 }
 #addElem{
@@ -128,7 +142,17 @@ button.edit-mobile i.fa-edit, button.edit-mobile i.fa-check-square-o{
 button.flipButton{
     color: #fff;
     margin-bottom: 15px;
-    background-color: #E8A500;
+    /*background-color: #E8A500;*/
+    background-color: #1073CE;
+    width: 75px;
+    height: 35px;
+    border-radius: 6px;
+    border-color: white;
+    border: 1px;
+}
+
+li.active{
+    background: #1073CE;
 }
 /* Flip CSS */
 /* old flip style
