--- a/css/main.css
+++ b/css/main.css
@@ -73,7 +73,7 @@ nav.navbar-default {
     margin: 0px;
     paddin: 0px;
 }
-.navbar-default .navbar-nav .active a, .navbar-default .navbar-nav .active a:hover, .navbar-default .navbar-nav .active a:visited{
+.navbar-default .navbar-nav .active a, .navbar-default .navbar-nav .active a:hover, .navbar-default .navbar-nav .active a:visited, .navbar-default .navbar-nav .active a:active, .navbar-default .navbar-nav .active a:focus{
     color: #fff;
     background-color: #1073CE;
 }
