--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,7 @@ a:hover {
 
 a.phone{
     color: #1073CE;
+    text-decoration: underline;
 }
 /* Custom default button */
 .btn-default,
@@ -77,7 +78,7 @@ nav.navbar-default {
     color: #fff;
     background-color: #1073CE;
 }
-.navbar-default .navbar-nav li a {
+.navbar-default .navbar-nav li a, .navbar-default .navbar-nav li a:hover{
     color: #fff;
 }
 .show_section{
