--- a/css/main.css
+++ b/css/main.css
@@ -91,6 +91,10 @@ nav.navbar-default {
     color: #fff;
     background-color: #1073CE;
 }
+.navbar-default .navbar-nav button a, .navbar-default .navbar-nav button:hover, .navbar-default .navbar-nav button:visited, .navbar-default .navbar-nav button:active, .navbar-default .navbar-nav button:focus{
+    color: #fff;
+    background-color: #1073CE;
+}
 .navbar-default .navbar-nav li a, .navbar-default .navbar-nav li a:hover{
     color: #fff;
 }
@@ -102,6 +106,9 @@ nav.navbar-default {
 }
 .navbar-default .navbar-toggle .icon-bar{
     background-color: #fff;
+}
+.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus{
+    background-color: #005a9c;
 }
 .show_section{
     display: initial;
@@ -229,14 +236,26 @@ li.active{
 /* entire container, keeps perspective */
 .flip-container {
 	-webkit-perspective: 1000;
-	-webkit-transform-style: preserve-3d;
+    -moz-perspective: 1000;
+    -ms-perspective: 1000;
+    perspective: 1000;
+
+    -ms-transform: perspective(1000px);
+    -moz-transform: perspective(1000px);
+    -moz-transform-style: preserve-3d; 
+    -ms-transform-style: preserve-3d; 
 }
-	/*  UPDATED! flip the pane when hovered */
 	.flip-container.flip .back {
-		-webkit-transform: rotateY(0deg);
+        -webkit-transform: rotateY(0deg);
+        -moz-transform: rotateY(0deg);
+        -ms-transform: rotateY(0deg);
+        transform: rotateY(0deg);
 	}
 	.flip-container.flip .front {
-	    -webkit-transform: rotateY(180deg);
+        -webkit-transform: rotateY(180deg);
+        -moz-transform: rotateY(180deg);
+        -ms-transform: rotateY(180deg);
+        transform: rotateY(180deg);
 	}
 
 .flip-container, .front, .back {
@@ -244,51 +263,63 @@ li.active{
 	height: 100%;
 }
 
-/* flip speed goes here */
 .flipper {
 	-webkit-transition: 0.6s;
-	-webkit-transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
+    -ms-transition: 0.6s;
 
-	position: relative;
+    -moz-transition: 0.6s;
+    -moz-transform: perspective(1000px);
+    -moz-transform-style: preserve-3d;
+    -ms-transform-style: preserve-3d;
+
+    transition: 0.6s;
+    transform-style: preserve-3d;
+
+    position: relative;
 }
 
-/* hide back of pane during swap */
 .front, .back {
 	-webkit-backface-visibility: hidden;
-	-webkit-transition: 0.6s;
-	-webkit-transform-style: preserve-3d;
+    -moz-backface-visibility: hidden;
+    -ms-backface-visibility: hidden;
+    backface-visibility: hidden;
 
-	position: absolute;
-	top: 0;
-	left: 0;
+    -webkit-transition: 0.6s;
+    -webkit-transform-style: preserve-3d;
+    -webkit-transform: rotateY(0deg);
+
+    -moz-transition: 0.6s;
+    -moz-transform-style: preserve-3d;
+    -moz-transform: rotateY(0deg);
+
+    -o-transition: 0.6s;
+    -o-transform-style: preserve-3d;
+    -o-transform: rotateY(0deg);
+
+    -ms-transition: 0.6s;
+    -ms-transform-style: preserve-3d;
+    -ms-transform: rotateY(0deg);
+
+    transition: 0.6s;
+    transform-style: preserve-3d;
+    transform: rotateY(0deg);
+
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
-/*  UPDATED! front pane, placed above back */
 .front {
-	z-index: 2;
 	-webkit-transform: rotateY(0deg);
+    -ms-transform: rotateY(0deg);
+    z-index: 2;
 }
 
-/* back, initially hidden pane */
 .back {
 	-webkit-transform: rotateY(-180deg);
+    -moz-transform: rotateY(-180deg);
+    -o-transform: rotateY(-180deg);
+    -ms-transform: rotateY(-180deg);
+    transform: rotateY(-180deg);
 }
-
-/* 
-	Some vertical flip updates 
-*/
-.vertical.flip-container {
-	position: relative;
-}
-
-	.vertical .back {
-		-webkit-transform: rotateX(180deg);
-	}
-
-	.vertical.flip-container:hover .back {
-	    -webkit-transform: rotateX(0deg);
-	}
-
-	.vertical.flip-container:hover .front {
-	    -webkit-transform: rotateX(180deg);
-	}
